[tool.poetry]
name = "pensa-bot"
version = "0.1.0"
description = ""
authors = ["Joao Pedro Watson <joaopedrowatson@hotmail.com>"]
readme = "README.md"
packages = [{include = "pensa_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.0"
pydantic = "^2.5.2"
discord-py = "^2.3.2"
dynaconf = "^3.2.4"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
